@@ -53,7 +53,7 @@
 #               SILVERFISH (the "silverfish highlighting" toggle uses it)
 #               SAPLING (some special data handling is needed)
 #               PORTAL (we generate the texture to use for this one)
-#               AIR_PORTAL (we generate the texture to use for this one)
+#               ENDER_PORTAL (we generate the texture to use for this one)
 #               FIRE (we generate the texture to use for this one)
 #               WATER (we do extra processing on the texture)
 #               STATIONARY_WATER (we do extra processing on the texture)
@@ -137,8 +137,8 @@
 #             CHEST
 #             NETHER_WART
 #             STEM
-#             AIR_PORTAL
-#             AIR_PORTAL_FRAME
+#             ENDER_PORTAL
+#             ENDER_PORTAL_FRAME
 #             CAULDRON
 #             ENCHANTMENT_TABLE
 #             BREWING_STAND
@@ -235,7 +235,7 @@
 #            The main texture should be the main texture
 #            "base" should be the base that potions reside on
 #
-#        AIR_PORTAL_FRAME
+#        ENDER_PORTAL_FRAME
 #            The main texture should be the top texture
 #            "sides" should be the side texture
 #            "bottom" should be the bottom texture
@@ -1207,17 +1207,17 @@ blocks:
       top: [10, 8]
 
   - id: 119
-    idStr: AIR_PORTAL
-    name: Air Portal
+    idStr: ENDER_PORTAL
+    name: Ender Portal
     mapcolor: [0, 0, 0]
-    type: AIR_PORTAL
+    type: ENDER_PORTAL
 
   - id: 120
-    idStr: AIR_PORTAL_FRAME
+    idStr: ENDER_PORTAL_FRAME
     name: Portal Frame
     mapcolor: [55, 142, 215]
     tex: [14, 9]
-    type: AIR_PORTAL_FRAME
+    type: ENDER_PORTAL_FRAME
     tex_extra:
       sides: [15, 9]
       bottom: [15, 10]
