@@ -118,7 +118,7 @@ public class BlockTypeRegular extends BlockType
 		{
 			if (this.idStr.equals("WATER") || this.idStr.equals("STATIONARY_WATER") ||
 					this.idStr.equals("FIRE") || this.idStr.equals("PORTAL") || 
-					this.idStr.equals("AIR_PORTAL"))
+					this.idStr.equals("ENDER_PORTAL"))
 			{
 				this.generated_texture = true;
 			}
