@@ -1,6 +1,8 @@
   * Updated Air Portal rendering to Beta 1.9-pre4
   * Added Ender Stone block from Beta 1.9-pre4
   * Set "The End" as a known dimension, for the level list
+  * Rename AIR_PORTAL and AIR_PORTAL_FRAME to ENDER_PORTAL and
+    ENDER_PORTAL_FRAME
 
 Minecraft X-Ray 3.4.0 (2011.10.11)
 
